Fix z-index for desktop to maintain interactivity.

--- a/src/scss/graph.scss
+++ b/src/scss/graph.scss
@@ -6,7 +6,7 @@
     position: sticky;
     top: 8rem;
     margin-bottom: $standard-spacing;
-    z-index: -1;
+    z-index: -1; // mouse-over events won't work!
 }
 
 svg {
@@ -22,6 +22,7 @@ svg {
         position: initial;
         top: initial;
         margin-bottom: 0;
+        z-index: initial;
     }
 
     svg {
